fix for crash, dogfood, nsbeta2, pp, regression, smoketest bug 36361 (open web location doesn't load page on linux). r=syd